<resources>
    <string name="app_name">Assignment 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">N Naga Sai Praneeth</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_fragment">This App is made for the purpose of Assignment 2 of CSD Android course.
        \n
        \nDeveloped by:
        \nN Naga Sai Praneeth,
        \n2017A3PS0202P. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primary">Primary</string>
    <string name="send">Send</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="copyright">©Copyright This App belongs to CSD Android Course</string>
</resources>
