<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primary"
            android:icon="@drawable/inbox"
            android:title="@string/primary" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/account_box"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/lifebuoy"
            android:title="@string/help" />
        <item android:title="" />
    </group>

</menu>
